<resources>
    <string name="app_name">15MinFitness</string>
    <string name="App_name">15MinFitness</string>
    <string name="mainButton1">Start a workout!</string>
    <string name="mainButton2">Get some body stats!</string>
    <string name="bodyStats">Body Stats</string>
    <string name="bodyStatsMessage">Get personalized body stats!</string>
    <string name="enterHeight">Enter height(in cm):</string>
    <string name="Height">Height</string>
    <string name="enterWeight">Enter weight(in kg):</string>
    <string name="Weight">Weight</string>
    <string name="getBodyStatsButton">Get body stats!</string>
    <string name="bodyResults">Body statistics:</string>
    <string name="back">x</string>
    <string name="yourBMI">Your BMI(Body Mass Index):</string>
    <string name="yourProtein">Minimal protein grams per day:</string>
    <string name="minimalWater">Minimal water liters per day:</string>
    <string name="startWorkout">Start a workout!</string>
    <string name="startWorkoutMessage">Check these recommended exercises out!</string>
    <string name="stretchingButton">Post-workout Stretching</string>
    <string name="bodyweightButton">Bodyweight exercises</string>
    <string name="dumbbellButton">Dumbbell exercises</string>
    <string name="all">All</string>
    <string name="push">Push</string>
    <string name="fullbody">Full Body</string>
    <string name="legs">Legs</string>
    <string name="pull">Pull</string>
    <string name="core">Core</string>
    <string name="addToWorkout">Add to your workout!</string>
    <string name="yourWorkoutTitle">Your workout!</string>
    <string name="emptyWorkoutList">Empty the list</string>
    <string name="startYourWorkout">Start your workout!</string>
    <string name="BreakText">Break time!</string>
    <string name="skip">Skip</string>
    <string name="workoutEndMessage">Workout completed! Congratulations!</string>
    <string name="recommendStretches">Post-workout static stretching is very beneficial!</string>
    <string name="workoutEndButton">Thanks! I will be back soon enough!</string>
</resources>