<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bodyStatsButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/biorhyme"
        android:paddingHorizontal="10dp"
        android:text="@string/mainButton2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/workoutButton"
        app:layout_constraintStart_toStartOf="@+id/workoutButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="cursive"
        android:text="@string/App_name"
        android:textSize="73sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="TextView"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/bodyStatsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.293" />

    <Button
        android:id="@+id/workoutButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/biorhyme"
        android:text="@string/mainButton1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bodyStatsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.561" />
</androidx.constraintlayout.widget.ConstraintLayout>